[package]
name = "anotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
futures-util = "0.3.28"
inotify = "0.10.1"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
