[package]
name = "anotify"
version = "0.1.0"
edition = "2021"
keywords = ["async", "inotify", "recursive"]
include = ["src/**/*", "Cargo.toml", "README.md"]
description = "An async wrapper for Linux inotify API, easy to use."

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "4", features = ["derive"] }
futures-util = "0.3.28"
inotify = "0.10.1"
path-absolutize = "3.1.0"
regex = "1.8.4"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync", "signal"] }
