[package]
name = "async-inotify"
version = "0.1.0"
authors = ["Jia Chao <jiachao2130@126.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/jiachao2130/anotify"
keywords = ["async", "inotify", "recursive"]
include = ["src/**/*", "Cargo.toml", "README.md"]
description = "An async wrapper for Linux inotify API, easy to use."

[[bin]]
name = "anotify"
path = "src/main.rs"

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "4", features = ["derive"] }
futures-util = "0.3.28"
inotify = "0.10.1"
path-absolutize = "3.1.0"
regex = "1.8.4"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync", "signal"] }
